unpackaged/main/default/objects/Feature_Need__c/Feature_Need__c.object-meta.xml
<CustomObject>
    <label>Feature Need</label>
    <nameField>
        <displayFormat>FN-{0000000}</displayFormat>
        <label>Feature Need #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Needs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>