unpackaged/main/default/objects/Feature_Need__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R177262</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Feature Needs</relationshipLabel>
    <relationshipName>Feature_Needs</relationshipName>
    <type>Lookup</type>
</CustomField>