unpackaged/main/default/objects/Feature_Need__c/fields/Deal_Breaker__c.field-meta.xml
<CustomField>
    <fullName>Deal_Breaker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R165823</description>
    <label>Deal Breaker</label>
    <type>Checkbox</type>
</CustomField>