unpackaged/main/default/objects/Feature_Need__c/fields/Feature_Category__c.field-meta.xml
<CustomField>
    <fullName>Feature_Category__c</fullName>
    <description>R164874</description>
    <label>Feature Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Affordable Housing</fullName>
            </value>
            <value>
                <fullName>Calendar</fullName>
            </value>
            <value>
                <fullName>CAM</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Client Portal</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Community Associations</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Corporate Oversight</fullName>
            </value>
            <value>
                <fullName>Custom Fields</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Draft/Template</fullName>
            </value>
            <value>
                <fullName>Email Integration</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Lead Management</fullName>
            </value>
            <value>
                <fullName>Leasing/Marketing</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Messages &amp; Comments</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>Notifications</fullName>
            </value>
            <value>
                <fullName>Online Payments</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>