unpackaged/main/default/objects/Feature_Need__c/fields/Feature_Notes__c.field-meta.xml
<CustomField>
    <fullName>Feature_Notes__c</fullName>
    <description>R164874</description>
    <label>Feature Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>