unpackaged/main/default/objects/Feature_Need__c/fields/Feature_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Feature_Sub_Category__c</fullName>
    <description>R164874</description>
    <label>Feature Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Feature_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH Pull for Rent/Dues</fullName>
            </value>
            <value>
                <fullName>Advanced Ability</fullName>
            </value>
            <value>
                <fullName>Advanced approval workflow</fullName>
            </value>
            <value>
                <fullName>Allocate Expenses Across Properties</fullName>
            </value>
            <value>
                <fullName>Amenities Reservation System</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>AppFolio billing</fullName>
            </value>
            <value>
                <fullName>Association Voting</fullName>
            </value>
            <value>
                <fullName>Auditing User Actions</fullName>
            </value>
            <value>
                <fullName>Automated Invoice Processing</fullName>
            </value>
            <value>
                <fullName>Avid Exchange</fullName>
                <label>Avid Invoice</label>
            </value>
            <value>
                <fullName>Avid Pay</fullName>
            </value>
            <value>
                <fullName>Avid Strongroom</fullName>
            </value>
            <value>
                <fullName>Blue Moon</fullName>
            </value>
            <value>
                <fullName>Board Document Approval</fullName>
                <label>Board Approvals – Other</label>
            </value>
            <value>
                <fullName>Board Invoice Approval/Signatures</fullName>
            </value>
            <value>
                <fullName>Budgeting</fullName>
            </value>
            <value>
                <fullName>Bulk Post CAM Charges</fullName>
            </value>
            <value>
                <fullName>CAM Gross Ups</fullName>
            </value>
            <value>
                <fullName>Check Scanning</fullName>
            </value>
            <value>
                <fullName>Community Portal</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Corporate Accounting</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Custom Rental Application</fullName>
            </value>
            <value>
                <fullName>Daily Interest Late Fees</fullName>
            </value>
            <value>
                <fullName>Data Access</fullName>
            </value>
            <value>
                <fullName>Decision Based</fullName>
            </value>
            <value>
                <fullName>Different receipt application per association</fullName>
            </value>
            <value>
                <fullName>Divisional Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>