unpackaged/main/default/objects/Feature_Need__c/fields/FeatureReleased__c.field-meta.xml
<CustomField>
    <fullName>FeatureReleased__c</fullName>
    <description>Created for R1814137</description>
    <label>Feature Released</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Not Right Now</fullName>
            </value>
            <value>
                <fullName>In Research</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>