unpackaged/main/default/objects/Feature_Need__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R164874</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Feature Needs</relationshipLabel>
    <relationshipName>Feature_Needs_del</relationshipName>
    <type>Lookup</type>
</CustomField>