unpackaged/main/default/objects/Feature_Need__c/recordTypes/APM.recordType-meta.xml
<RecordType>
    <fullName>APM</fullName>
    <active>true</active>
    <description>R1812595</description>
    <label>APM</label>
</RecordType>