unpackaged/main/default/objects/Feature_Need__c/recordTypes/MyCase.recordType-meta.xml
<RecordType>
    <fullName>MyCase</fullName>
    <active>true</active>
    <description>R1812595</description>
    <label>MyCase</label>
</RecordType>