unpackaged/main/default/objects/Feature_Need__c/validationRules/Require_Feature_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Feature_Notes</fullName>
    <active>true</active>
    <description>R164874</description>
    <errorConditionFormula>ISBLANK( Feature_Notes__c ) &amp;&amp;  ISPICKVAL(Feature_Sub_Category__c, &#39;Other&#39;)</errorConditionFormula>
    <errorMessage>Feature Notes are require when selecting Sub Category of &quot;Other&quot;</errorMessage>
</ValidationRule>